--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -15,7 +15,8 @@
 
 [[main]]
   name = "Projects"
-  url = "#projects"
+# url = "#projects"
+  url = "https://icdesigntech.com/"
   weight = 30
 
 [[main]]
