--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -6,15 +6,15 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Profile"
+title = "NGO HUY CU"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://yuginhc.netlify.app/"
+baseurl = "https://ngohuycu.netlify.app/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "nhc.jp89@gmail.com"
+copyright = "NGO HUY CU"
 
 ############################
 ## Advanced options below ##
