--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,7 +14,7 @@
   weight = 20
 
 [[main]]
-  name = "Projects"
+  name = "Website"
 # url = "#projects"
   url = "https://icdesigntech.com/"
   weight = 30
@@ -27,7 +27,7 @@
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
