--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -116,7 +116,7 @@ contact_links = [
   {icon = "twitter", icon_pack = "fab", name = "DM Me", link = ""},
   {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:nhc_bkpro_auto?call"},
 #  {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = ""},
-  {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://icdesigntech.com"},
+#  {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://icdesigntech.com"},
   # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
   ]
 
